// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyToClipboard renders disabled button correctly 1`] = `
<button
  className="button button--disabled button--default copy-to-clipboard"
  onClick={[Function]}
>
  Copy Text
</button>
`;

exports[`CopyToClipboard renders enabled button correctly 1`] = `
<button
  className="button button--primary copy-to-clipboard"
  onClick={[Function]}
>
  Copy Text
</button>
`;
